order return implemented

--- a/views/admin/offerManagement.ejs
+++ b/views/admin/offerManagement.ejs
@@ -25,13 +25,13 @@
         <thead>
             
           <tr>
-            <th class=" bg-blueGray-200  text-blueGray-500 px-36 align-middle border border-solid border-blueGray-100 py-3 text-xs uppercase border-l-0 border-r-0 whitespace-nowrap font-semibold text-left">
+            <th class=" bg-red-500 text-white px-36 align-middle border border-solid border-blueGray-100 py-3 text-xs uppercase border-l-0 border-r-0 whitespace-nowrap font-semibold text-left">
                          Name</th>
-            <th class=" bg-blueGray-200 text-blueGray-500 px-36 align-middle border border-solid border-blueGray-100 py-3  text-xs uppercase border-l-0 border-r-0 whitespace-nowrap font-semibold text-left">
+            <th class=" bg-red-500 text-white px-36 align-middle border border-solid border-blueGray-100 py-3  text-xs uppercase border-l-0 border-r-0 whitespace-nowrap font-semibold text-left">
                          Orginal Price</th>
-          <th class=" bg-blueGray-200 text-blueGray-500 px-36  border border-solid border-blueGray-100 py-3  text-xs uppercase border-l-0 border-r-0 whitespace-nowrap font-semibold text-left">
+          <th class=" bg-red-500 text-white px-36  border border-solid border-blueGray-100 py-3  text-xs uppercase border-l-0 border-r-0 whitespace-nowrap font-semibold text-left">
                           Offer Price</th>
-          <th class=" bg-blueGray-200 text-blueGray-500 px-36  border border-solid border-blueGray-100 py-3  text-xs uppercase border-l-0 border-r-0 whitespace-nowrap font-semibold text-left">
+          <th class=" bg-red-500 text-white px-36  border border-solid border-blueGray-100 py-3  text-xs uppercase border-l-0 border-r-0 whitespace-nowrap font-semibold text-left">
                           Delete</th>
                </tr>
           </thead>
