--- a/views/user/product.ejs
+++ b/views/user/product.ejs
@@ -35,14 +35,14 @@
                 </div>
                 <div class="mt-2 w-full lg:order-1 lg:w-32 lg:flex-shrink-0">
                   <div class="flex flex-row items-start lg:flex-col">
-                    <button type="button" class="flex-0 aspect-square mb-3 h-20 overflow-hidden rounded-lg border-2 border-gray-900 text-center">
-                      <img class="h-full w-full object-cover" src="/product_images/<%- datas[0].productImage[0] %>" alt="" />
+                    <button type="button" class="flex-0 aspect-square mb-3 h-20 overflow-hidden rounded-lg border-2 border-transparent text-center">
+                      <img class="h-full w-full object-cover" id="img-1" src="/product_images/<%- datas[0].productImage[0] %>" alt="" />
                     </button>
                     <button type="button" class="flex-0 aspect-square mb-3 h-20 overflow-hidden rounded-lg border-2 border-transparent text-center">
-                      <img class="h-full w-full object-cover" src="/product_images/<%- datas[0].productImage[1] %>" alt="" />
+                      <img class="h-full w-full object-cover" id="img-2" src="/product_images/<%- datas[0].productImage[1] %>" alt="" />
                     </button>
                     <button type="button" class="flex-0 aspect-square mb-3 h-20 overflow-hidden rounded-lg border-2 border-transparent text-center">
-                      <img class="h-full w-full object-cover" src="/product_images/<%- datas[0].productImage[2] %>" alt="" />
+                      <img class="h-full w-full object-cover" id="img-3" src="/product_images/<%- datas[0].productImage[2] %>" alt="" />
                     </button>
                   </div>
                 </div>
@@ -184,6 +184,25 @@
 </section>
 
    <script>
+
+const bigImg = document.getElementById('img-container');
+
+const imgs1 = document.getElementById('img-1');
+const image1 = document.getElementById('img-1').src;
+const imgs2 = document.getElementById('img-2');
+const image2 = document.getElementById('img-2').src;
+const imgs3 = document.getElementById('img-3');
+const image3 = document.getElementById('img-3').src;
+imgs1.addEventListener('click',() => {
+  bigImg.src = image1
+})
+imgs2.addEventListener('click',() => {
+  bigImg.src = image2
+})
+imgs3.addEventListener('click',() => {
+  bigImg.src = image3
+})
+
       //<------------ to cart page -------------->
 const addToCartWithQuantity = (productId, userId) => {
     const quantitySelect = document.getElementById('quantitySelect');
