--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -250,13 +250,13 @@
             <h2 class="mb-6 text-sm font-semibold text-gray-900 uppercase dark:text-gray-950">Category</h2>
             <ul class="text-gray-500 dark:text-gray-700 font-medium">
                 <li class="mb-4">
-                    <a href="#" class="hover:underline  sono-regular text-xs">Dress</a>
+                    <a href="/category/Dress" class="hover:underline  sono-regular text-xs">Dress</a>
                 </li>
                 <li class="mb-4">
-                    <a href="#" class="hover:underline  sono-regular text-xs">Watche</a>
+                    <a href="/category/Watch" class="hover:underline  sono-regular text-xs">Watch</a>
                 </li>
                 <li class="mb-4">
-                    <a href="#" class="hover:underline  sono-regular text-xs">Footware</a>
+                    <a href="/category/Footware" class="hover:underline  sono-regular text-xs">Footware</a>
                 </li>
             </ul>
         </div>
@@ -284,10 +284,10 @@
                     <a href="#" class="hover:underline  sono-regular text-xs">Privacy Policy</a>
                 </li>
                 <li class="mb-4">
-                    <a href="#" class="hover:underline  sono-regular text-xs">Return &amp; Exchange</a>
+                    <a href="/orderHistory" class="hover:underline  sono-regular text-xs">Return &amp; Exchange</a>
                 </li>
                 <li class="mb-4">
-                    <a href="#" class="hover:underline  sono-regular text-xs">Shipping &amp; Delivery</a>
+                    <a href="/orderHistory" class="hover:underline  sono-regular text-xs">Shipping &amp; Delivery</a>
                 </li>
             </ul>
         </div>
