admin order return notification icon

--- a/views/admin/category-add.ejs
+++ b/views/admin/category-add.ejs
@@ -78,6 +78,8 @@
               toastr.success(message);
           } else if (type === 'error') {
               toastr.error(message);
+          }else if(type === 'warning'){
+            toastr.warning(message)
           }
       }
   });
