--- a/views/admin/category-list.ejs
+++ b/views/admin/category-list.ejs
@@ -60,7 +60,7 @@
                 <a href="./category-block/<%= category._id %>" class="font-medium text-red-950  hover:underline">
                     <% if (category.deleted == false) { %>
                         <span class="relative flex h-3 w-3">
-                            <span class="animate-ping absolute inline-flex h-full rounded-full bg-blue-400 opacity-75"> </span>
+                            <span class="absolute inline-flex h-full rounded-full bg-blue-400 opacity-75"> </span>
                             <span class="relative inline-flex rounded-full h-3 w-3 bg-green-500 pl-3">Block</span>
                           </span>
                     <% } else { %>
