--- a/views/user/verify-otp.ejs
+++ b/views/user/verify-otp.ejs
@@ -8,6 +8,8 @@
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link href="https://cdn.jsdelivr.net/npm/remixicon@3.5.0/fonts/remixicon.css" rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Michroma&display=swap">
+        <!------------- toastr -------------->
+        <link href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/css/toastr.min.css" rel="stylesheet">
     <script src="toastr.js"></script>
     <script src="https://cdn.tailwindcss.com"></script>
     <title>otp Verification</title>
@@ -33,9 +35,38 @@
     </div>
 </main>
 
+    
+<script>
+    function parseQueryParams() {
+        var queryParams = {};
+        var queryString = window.location.search.substring(1);
+        var params = queryString.split("&");
+        for (var i = 0; i < params.length; i++) {
+            var pair = params[i].split("=");
+            queryParams[decodeURIComponent(pair[0])] = decodeURIComponent(pair[1]);
+        }
+        return queryParams;
+    }
+  
+    document.addEventListener('DOMContentLoaded', function() {
+        var queryParams = parseQueryParams();
+        var message = queryParams['message'];
+        var type = queryParams['type'];
+        if (message) {
+            if (type === 'success') {
+                toastr.success(message);
+            } else if (type === 'error') {
+                toastr.error(message);
+            }
+        }
+    });
+  </script>
 </body>
 
 
+<!------------- toastr jquery ---------------->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/js/toastr.min.js"></script>
     <script>
 // Set the OTP timer duration in seconds
 const otpTimerDuration = 60;
@@ -86,4 +117,5 @@ const timerInterval = setInterval(updateOTPTimer, 1000);
         });
     });
     </script>
+
 </html>
