--- a/views/admin/userManagement.ejs
+++ b/views/admin/userManagement.ejs
@@ -1,5 +1,39 @@
 <%- include('../partials/adminHeader') %>
 
+    <!----------- toaster css ------------->
+    <style>
+        #toast-container > .toast-success {
+          background: linear-gradient(to right, #16b051e3, #22242F 50% ) !important;
+          width: 350px;
+          height: 70px;
+          position: relative;
+          color: white; 
+          
+
+
+          /* pading for text */
+          font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+        }
+        
+        #toast-container > .toast-success::after {
+          content: ""; 
+          position: absolute;
+          bottom: 0;
+          left: 0;
+          width: 100%;
+          height: 4px; 
+          background-color: rgb(4, 255, 0); 
+          transform: scaleX(0); 
+          transform-origin: right; 
+          animation: expandLine 5s linear forwards; 
+        }
+      
+        @keyframes expandLine {
+          to {
+            transform: scaleX(1); 
+          }
+        }
+      </style>
 <main>
 
     <section class="w-full h-auto bg-blue-700 overflow-x-auto mt-12">
