--- a/views/admin/admin-login.ejs
+++ b/views/admin/admin-login.ejs
@@ -16,7 +16,8 @@
         height: 70px;
         position: relative;
         color: white; 
-        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+        text-align: center;
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
       }
       
       #toast-container > .toast-error::after {
@@ -39,7 +40,36 @@
       }
     </style>
     
+    <style>
+      #toast-container > .toast-success {
+        background: linear-gradient(to right, #1fe90ce3, #22242F 50% ) !important;
+        width: 350px;
+        height: 70px;
+        position: relative;
+        color: white; 
+        text-align: center;
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
+      }
+      
+      #toast-container > .toast-success::after {
+        content: ""; 
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        width: 100%;
+        height: 4px; 
+        background-color: rgb(0, 255, 55); 
+        transform: scaleX(0); 
+        transform-origin: right; 
+        animation: expandLine 5s linear forwards; 
+      }
     
+      @keyframes expandLine {
+        to {
+          transform: scaleX(1); 
+        }
+      }
+    </style>
     
     
 </head>
