--- a/views/admin/dashboard.ejs
+++ b/views/admin/dashboard.ejs
@@ -1,4 +1,35 @@
 <%- include('../partials/adminHeader') %>
+<style>
+    #toast-container > .toast-success {
+      background: linear-gradient(to right, #1fe90ce3, #22242F 50% ) !important;
+      width: 350px;
+      height: 70px;
+      position: relative;
+      color: white; 
+      text-align: center;
+      font-size: larger;
+      font-family: Verdana, Geneva, Tahoma, sans-serif;
+    }
+    
+    #toast-container > .toast-success::after {
+      content: ""; 
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      width: 100%;
+      height: 4px; 
+      background-color: rgb(0, 255, 55); 
+      transform: scaleX(0); 
+      transform-origin: right; 
+      animation: expandLine 5s linear forwards; 
+    }
+  
+    @keyframes expandLine {
+      to {
+        transform: scaleX(1); 
+      }
+    }
+  </style>
 
    <main>
       <!-- Content -->
