--- a/views/user/checkout.ejs
+++ b/views/user/checkout.ejs
@@ -31,6 +31,12 @@
                 </section>
                 <section  id="shippingAddressSection">
         <!--------------- Shipping Address Section --------------->
+        <% if(address.length == 0){ %>
+            <h2 class="mb-4 mt-6 font-bold md:text-xl text-heading text-center">Shipping Address</h2>
+            <div class="flex-row items-center mb-4 pl-96 bg-white shadow-xl border-t mx-12 mt-5">
+            <a href="/addAddress" class="bg-stone-500 hover:bg-blue-600 text-white font-bold py-1 px-4 rounded mr-2">Add Address</a>
+            </div>
+            <% }else{ %>
                     <h2 class="mb-4 mt-6 font-bold md:text-xl text-heading text-center">Shipping Address</h2>
                     <div class="flex-row items-center mb-4 pl-96 bg-white shadow-xl border-t mx-12">
                         <% for (let i = 0; i < address.length; i++) { %>
@@ -45,6 +51,7 @@
                             </ul>
                         <% } %>
                     </div>
+                    <% } %>
               </section>
                 <section class="mt-12 ml-96 bg-white">
                     <!-- Coupons Section -->
