--- a/views/admin/offerManagement.ejs
+++ b/views/admin/offerManagement.ejs
@@ -5,6 +5,69 @@
 <link rel="stylesheet" href="https://demos.creative-tim.com/notus-js/assets/styles/tailwind.css">
 <link rel="stylesheet" href="https://demos.creative-tim.com/notus-js/assets/vendor/@fortawesome/fontawesome-free/css/all.min.css">
 
+ <!----------- toaster css ------------->
+ <style>
+  #toast-container > .toast-success {
+    background: linear-gradient(to right, #13ff03e3, #22242F 50% ) !important;
+    width: 350px;
+    height: 70px;
+    position: relative;
+    color: white; 
+    text-align: center;
+    font-size: larger;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+  }
+  
+  #toast-container > .toast-success::after {
+    content: ""; 
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 4px; 
+    background-color: rgb(9, 255, 0); 
+    transform: scaleX(0); 
+    transform-origin: right; 
+    animation: expandLine 5s linear forwards; 
+  }
+
+  @keyframes expandLine {
+    to {
+      transform: scaleX(1); 
+    }
+  }
+</style>
+ <style>
+  #toast-container > .toast-error {
+    background: linear-gradient(to right, #ff0303e3, #22242F 50% ) !important;
+    width: 350px;
+    height: 70px;
+    position: relative;
+    color: white; 
+    text-align: center;
+    font-size: larger;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+  }
+  
+  #toast-container > .toast-error::after {
+    content: ""; 
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 4px; 
+    background-color: rgb(255, 0, 0); 
+    transform: scaleX(0); 
+    transform-origin: right; 
+    animation: expandLine 5s linear forwards; 
+  }
+
+  @keyframes expandLine {
+    to {
+      transform: scaleX(1); 
+    }
+  }
+</style>
 <main>
 
 
@@ -83,10 +146,10 @@
                              <% }) %>
                             </select>
                         </div>
-                        <div class="md:col-span-5">
+                        <!-- <div class="md:col-span-5">
                           <label for="OrginalPrice"> Original Price </label>
                           <input type="number" name="OrginalPrice" id="OrginalPrice" class="h-8 border mt-1 rounded px-4 w-full bg-gray-50 border-gray-300" value="2000" />
-                        </div>
+                        </div> -->
                         <div class="md:col-span-5">
                           <label for="offerPrice">Offer Price </label>
                           <input type="number" name="offerPrice" id="offerPrice" class="h-8 border mt-1 rounded px-4 w-full bg-gray-50 border-gray-300" value="" />
@@ -136,6 +199,30 @@ deleteOfferBtns.forEach(button => {
 });
 
 </script>
+<script>
+  function parseQueryParams() {
+      var queryParams = {};
+      var queryString = window.location.search.substring(1);
+      var params = queryString.split("&");
+      for (var i = 0; i < params.length; i++) {
+          var pair = params[i].split("=");
+          queryParams[decodeURIComponent(pair[0])] = decodeURIComponent(pair[1]);
+      }
+      return queryParams;
+  }
 
+  document.addEventListener('DOMContentLoaded', function() {
+      var queryParams = parseQueryParams();
+      var message = queryParams['message'];
+      var type = queryParams['type'];
+      if (message) {
+          if (type === 'success') {
+              toastr.success(message);
+          } else if (type === 'error') {
+              toastr.error(message);
+          }
+      }
+  });
+</script>
 
 <%- include('../partials/adminFooter') %>
