--- a/views/user/orderHistory.ejs
+++ b/views/user/orderHistory.ejs
@@ -77,7 +77,7 @@
                                   <div class="text-left"> <%= total[i] %> </div>
                               </td>
                               <td class="pl-24 pt-5 whitespace-nowrap">
-                                  <div class="text-left"> <%= orders[i].discountPrice %> </div>
+                                  <div class="text-left"> <%= orders[i].discountPrice %> % </div>
                               </td>
                               <td class="pl-24 pt-5 whitespace-nowrap">
                                   <div class="text-left"> <%= orders[i].paymentMethod %> </div>
