--- a/views/admin/salesReport.ejs
+++ b/views/admin/salesReport.ejs
@@ -7,33 +7,33 @@
 
 <main>
 
-
-<section class="py-1 bg-blueGray-50 ">
-<div class="w-full mb-12 xl:mb-0 px-1 mt-16">
-  <div class="relative flex flex-col min-w-0 break-words bg-white w-full mb-6 shadow-lg rounded ">
-
-       
-
-<form class="max-w-sm text-left pl-12">
-
-    <div class="mb-5 w-52">
-      <label for="password" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">From</label>
-      <input type="date" id="password" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" required />
+        <!---------------- Sorting orders ---------------->
+<section class="flex justify-end items-end w-3/4">
+  <div class="relative">
+    <button id="dropdownDefaultButton" data-dropdown-toggle="dropdown" class="mt-12 text-gray-950 h-9 w-44 border border-gray-950 bg-gray-500  focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium text-sm px-5 py-2.5 inline-flex dark:bg-gray-50 dark:hover:bg-gray-700 dark:hover:text-white dark:focus:ring-blue-800 justify-center" type="button" onclick="toggleDropdown()">
+      <span class="flex items-center font-thin">Sort By</span>
+      <svg class="w-2.5 h-2.5 mt-2 ml-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 10 6"><path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 1 4 4 4-4"/></svg>
+    </button>
+    <div id="dropdown" class="absolute right-0 z-10 hidden bg-white divide-y divide-gray-100 shadow w-44 dark:bg-gray-100 text-gray-950">
+      <ul class="py-2 text-sm text-gray-700 dark:text-gray-200" aria-labelledby="dropdownDefaultButton">
+        <li>
+          <a href="/admin/sortSalesReport/Delevered" class="block px-4 py-2 text-gray-950 font-thin hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Delivered</a>
+        </li>
+        <li>
+          <a href="/admin/sortSalesReport/Cancelled" class="block px-4 py-2 text-gray-950 font-thin hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white" >Cancelled</a>
+        </li>
+        <li>
+          <a href="/admin/sortSalesReport/Returned" class="block px-4 py-2 text-gray-950 font-thin hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white" >Returned</a>
+        </li>
+      </ul>
     </div>
-    <div class="mb-5 w-52">
-      <label for="password" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">To</label>
-      <input type="date" id="password" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" required />
-    </div>
- 
-    <button type="submit" class="w-52 mb-6 text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm  sm:w-auto px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">Submit</button>
-  </form>
-  
-    </div>
+  </div>
+</section>
 
-  </section>
+
   <section>
 
-    <div class="w-full">
+    <div class="w-3/4 ml-5">
       <table class="items-center bg-transparent w-full border-collapse ">
         <thead>
             
@@ -65,7 +65,7 @@
             <%= ord.id %>
             </td>
             <td class="border-t-0 px-6 align-center border-l-0 border-r-0 text-xs whitespace-nowrap p-4">
-            <%= ord.userId %>
+            <%= name %>
             </td>
             <td class="border-t-0 px-6 align-middle border-l-0 border-r-0 text-xs whitespace-nowrap p-4">
               <i class=" text-emerald-500 mr-4"></i>
@@ -103,7 +103,6 @@
 
 </main>
 
-
 <script>
   document.addEventListener('DOMContentLoaded', function() {
     const downloadPDFBtn = document.getElementById('downloadPDF');
@@ -113,4 +112,12 @@
   });
 </script>
 
+
+    <!---------------- sort dropdown ------------------->
+    <script>
+      function toggleDropdown() {
+          var dropdown = document.getElementById('dropdown');
+          dropdown.classList.toggle('hidden');
+        }
+  </script>
 <%- include('../partials/adminFooter') %>
